assets/css/style.scss
---
---

@import "code";
@import "monokai";

$back: #272822;
$text: #fff;
$mainFont: 'Poppins', sans-serif;
$titleFont: 'Titillium Web', sans-serif;


/*
*
CSS for default.html
*
*/
* {
	margin: 0px;
    padding: 0px;
    background: $back;
    color: $text;
	box-sizing: border-box;
}

body
{
    //min-width:330px;
	font-family: $mainFont;
}


/*
*
CSS for logo, navbar.html
*
*/


header
{
	display: flex;
	align-items: center;
}

.logo-container, .nav-links,
{
	display: flex;
}

.logo-container
{
	flex: 1;
    
    .logo
    { 
        max-width: 100%;
        max-height: 85%;
	    width: 120px;
        height: 80px;
	    //margin: auto;
    }

    h4.title
    {
        display: flex;
        flex: 1;
        font-size: 24px;
        font-family: $titleFont;
        align-self: center;
    }
}
    
/*

//navbar is disabled for now

nav
{
	flex: 1;

    .nav-links
    {
        justify-content: space-around;
        display: flex;
        list-style: none;

        .nav-link
        {
            //color: #5f5f79;
            //font-size: 18px;
            text-decoration: none;
        }
    }
}
*/


/*
*
CSS for home.html
*
*/


.presentation
{
	display: flex;
	width: 90%;
	margin: auto;
	min-height: 80vh;
	align-items: center;

    .introduction
    {
        flex: 1;

        .intro-text
        {
            h1
            {
                font-size: 44px;
                font-weight: 500;
            }

            p
            {
                margin-top: 5px;
                font-size: 22px;
            }

            .social-media
            {
                //margin-top: 8px;
                
                .fab, .social, .fas, .far
                {
                    margin-right: 20px;
                    flex: 1;
                    text-decoration: none;
                }
            }
        }
    }

    .cover
    {
        flex: 1;
        display: flex;
        justify-content: center;
        padding-bottom: 20px;
        /*height: 60vh;*/
    }
}


/*
*
CSS for post.html 
*
*/


.posts
{
    .post-link
    {
        text-decoration: none;
        padding: 5px 0px 3px 20px; 
    }
    
    .blog-title
    {
        padding: 35px 0px 20px 20px; 
        
    }
}


/*
*
CSS for post.html 
*
*/


.center
{
    margin: auto;
    width: 70%;
}

.heading
{
    display: flex;

    .page-title
    {
        flex: 1;
        align-items: center;
    }

    .date
    {
        flex: 2;
        //padding-left: 40px;
        //padding-top: 7px;
        font-size: 0.8rem;
        align-self: center;
        padding-left:50%;
    }
}


@media screen and (max-width: 1024px)
{
	.presentation
    {
		flex-direction: column;
	
        .introduction
        {
            margin-top: 5vh;
            text-align: center;
            .intro-text
            {
                h1
                {
                    font-size: 25px;
                }

                p
                {
                    font-size: 15px;
                }

                .social-media
                {
                    //margin-top: 8px;                    
                    .fab, .fas, .far, .social
                    {
                        text-decoration: none;
                        margin-right: 10px;
                        margin-bottom: 10px;
                        flex: 1;
                    }
                }
            }
        }
    }

    .date
    {
        padding-left:15%;
    }
    
    .center
    {
        margin: auto;
        width: 90%;
    }
}


@media only screen and (max-width: 768px)
{
    .cover
    {
        height: 75%;
        width:75%;
        padding-bottom: 10px;
    }

    .date
    {
        padding-left:15%;
    }

    .center
    {
        margin: auto;
        width: 90%;
    }
      //.nav-links,
      //{
        //flex-direction: column;
        //margin-left: auto;
        //text-align: right;
        //display:none;
      //}
}

